# PollutionBackend

./: README.md  SCRAPING.md  api_server.py  app.py  data_scraper.py  main.py  package_list.md  pyproject.toml  run_backend_api.sh  run_with_real_data.sh
data/: pollution_data.json
